<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cua.DetailCuaActivity">
    <include layout="@layout/toolbar_layout"/>
        <RelativeLayout
            android:layout_below="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_marginTop="@dimen/margin_big"
                android:layout_width="@dimen/layout_150"
                android:layout_height="@dimen/layout_150"
                android:layout_centerHorizontal="true"
                android:src="@drawable/cua"
                android:id="@+id/image_cua"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_cua"
                android:layout_marginTop="@dimen/margin_big"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_marginRight="@dimen/margin_5"
                android:background="@drawable/draw_cua_detail"
                android:orientation="vertical"
                >
                <RelativeLayout
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tencua"
                        android:textSize="@dimen/text_15"
                        android:textColor="@android:color/black"
                        android:layout_centerVertical="true"
                        />
                    <EditText
                        android:layout_width="@dimen/layout_100"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:id="@+id/edTencua"
                        android:imeOptions="actionNext"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rongcua"
                        android:textSize="@dimen/text_15"
                        android:textColor="@android:color/black"
                        android:layout_centerVertical="true"
                        />
                    <EditText
                        android:layout_width="@dimen/layout_100"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:id="@+id/edRongcua"
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="13dp"
                        android:text="@string/caocua"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_15" />
                    <EditText
                        android:layout_width="@dimen/layout_100"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:inputType="number"
                        android:id="@+id/edCaocua"
                        android:imeOptions="actionNext"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hochancanh"
                        android:textSize="@dimen/text_15"
                        android:textColor="@android:color/black"
                        android:layout_centerVertical="true"
                        />
                    <EditText
                        android:layout_width="@dimen/layout_100"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:inputType="number"
                        android:id="@+id/edHochancanh"
                        android:imeOptions="actionNext"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sobo"
                        android:textSize="@dimen/text_15"
                        android:textColor="@android:color/black"
                        android:layout_centerVertical="true"
                        />
                    <EditText
                        android:layout_width="@dimen/layout_100"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:inputType="number"
                        android:id="@+id/edSobo"
                        android:imeOptions="actionDone"
                        />
                </RelativeLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:background="@drawable/border_button2"
                    android:text="@string/luucua"
                    android:textColor="@android:color/white"
                    android:id="@+id/btnLuuCua"
                    />

                <Button
                    android:id="@+id/btnQuaylai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/margin_small"
                    android:background="@drawable/border_button2"
                    android:text="@string/quaylai"
                    android:textColor="@android:color/white" />
            </RelativeLayout>
        </RelativeLayout>

</RelativeLayout>