<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tenctrinh"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_20"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:id="@+id/item_tenctrinh"
            android:layout_centerHorizontal="true"
            />
        <ImageView
            android:layout_width="@dimen/layout_35"
            android:layout_height="@dimen/layout_35"
            android:src="@drawable/ic_delete"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:id="@+id/deleteCT"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <LinearLayout
            android:layout_width="@dimen/layout_60"
            android:layout_height="@dimen/layout_60"
            android:background="@drawable/border_item"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:id="@+id/nhom"
            >
            <ImageView
                android:layout_gravity="center"
                android:layout_width="@dimen/margin_35"
                android:layout_height="@dimen/margin_35"
                android:src="@drawable/khung"
                android:layout_marginLeft="@dimen/mardin_2"
                android:layout_marginRight="@dimen/mardin_2"
                android:layout_marginTop="@dimen/margin_5"
                android:scaleType="fitXY"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/khungnhom"
                android:textSize="@dimen/text_8"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/mardin_2"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/layout_60"
            android:layout_height="@dimen/layout_60"
            android:background="@drawable/border_item"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:id="@+id/cua"
            >
            <ImageView
                android:layout_gravity="center"
                android:layout_width="@dimen/margin_35"
                android:layout_height="@dimen/margin_35"
                android:src="@drawable/banve"
                android:layout_marginLeft="@dimen/mardin_2"
                android:layout_marginRight="@dimen/mardin_2"
                android:layout_marginTop="@dimen/margin_5"
                android:scaleType="fitXY"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cua"
                android:textSize="@dimen/text_8"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/mardin_2"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/layout_60"
            android:layout_height="@dimen/layout_60"
            android:background="@drawable/border_item"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:id="@+id/kinh"
            >
            <ImageView
                android:layout_gravity="center"
                android:layout_width="@dimen/margin_35"
                android:layout_height="@dimen/margin_35"
                android:src="@drawable/kinh"
                android:layout_marginLeft="@dimen/mardin_2"
                android:layout_marginRight="@dimen/mardin_2"
                android:layout_marginTop="@dimen/margin_5"
                android:scaleType="fitXY"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kinh"
                android:textSize="@dimen/text_8"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/mardin_2"
                />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_1"
        android:background="@color/colorText_light"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        />
</LinearLayout>