<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity"
    android:background="@color/colorPrimary"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="@dimen/layout_width_heigth_big"
                android:layout_height="@dimen/layout_width_heigth_big"
                android:src="@drawable/door"
                android:tint="@android:color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_55"
                android:id="@+id/door"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/door"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_centerHorizontal="true"
                android:text="@string/dangkimoi"
                android:textSize="@dimen/text_28"
                android:textColor="@android:color/white"
                android:id="@+id/tvGym"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvGym"
                android:layout_marginTop="@dimen/margin_big"
                android:layout_marginLeft="@dimen/margin_35"
                android:layout_marginRight="@dimen/layout_35"
                android:orientation="vertical"
                android:id="@+id/layout_edit"
                >
                <EditText
                    android:id="@+id/edTk"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/tk"
                    android:imeOptions="actionDone"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/margin_small"
                    android:textColor="@android:color/black"
                    android:background="@drawable/border_button"
                    android:textColorHint="@color/text_color_light"
                    android:drawableLeft="@drawable/ic_account"
                    android:drawableTint="@color/colorText_light"
                    android:drawablePadding="@dimen/margin_small"/>
                <EditText
                    android:id="@+id/edMK"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="Mật khẩu"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/margin_small"
                    android:textColor="@android:color/black"
                    android:background="@drawable/border_button"
                    android:textColorHint="@color/text_color_light"
                    android:drawableLeft="@drawable/padlock"
                    android:drawablePadding="@dimen/margin_small"/>

                <EditText
                    android:id="@+id/edMK2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/nhaplaimk"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/margin_small"
                    android:textColor="@android:color/black"
                    android:background="@drawable/border_button"
                    android:textColorHint="@color/text_color_light"
                    android:drawableLeft="@drawable/padlock"
                    android:drawablePadding="@dimen/margin_small"
                    />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_edit"
                android:layout_marginTop="@dimen/margin_55"
                android:layout_marginLeft="@dimen/margin_35"
                android:layout_marginRight="@dimen/layout_35"
                android:background="@drawable/border_button"
                android:text="@string/dangki"
                android:textColor="@color/colorText_light"
                android:textSize="@dimen/text_15"
                android:id="@+id/btnSignin"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/layout_150"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/telephone"
                        android:tint="@android:color/white"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hỗ trợ: 19000000"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="www.abc.vn"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>